fixed issues with layout and broken submit button

--- a/GameKnight/WebContent/CreateEvent.html
+++ b/GameKnight/WebContent/CreateEvent.html
@@ -8,10 +8,10 @@
 <nav>
 <a href="index.html">Home</a>
 <a href="GameList.html">Game List</a>
-<a href="CreateEvent.html"> a game</a>
+<a href="CreateEvent.html">Host a game</a>
 <form>
   Sign in:<br>
-  <input type="text" name="login">
+  <input type="text" name="login"><br>
   password:<br>
   <input type="text" name="password"><br> 
 </form>
@@ -19,7 +19,7 @@
 <div>
 <form>
 Game Name:<br>
-<input type="text" name="game">
+<input type="text" name="game"><br>
 
 Place game will be:<br>
 <input type="text" name="place"><br>
@@ -29,7 +29,8 @@ Place game will be:<br>
 
 description:<br>
 <textArea name="description">
-</textArea>
+</textArea><br>
+<input type="submit" name="submit">
 </form>
 
 </div>
