--- a/GameKnight/WebContent/index.html
+++ b/GameKnight/WebContent/index.html
@@ -9,7 +9,7 @@
 <nav>
 <a href="index.html">Home</a>
 <a href="GameList.html">Game List</a>
-<a href="CreateEvent.html">host a game</a>
+<a href="CreateEvent.html">Host a game</a>
 <form>
   Sign in:<br>
   <input type="text" name="login"><br> 
