added auto complete to create an event page

--- a/GameKnight/WebContent/CreateEvent.html
+++ b/GameKnight/WebContent/CreateEvent.html
@@ -3,6 +3,11 @@
 <head>
 <meta charset="ISO-8859-1">
 <title>Create Event</title>
+<link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+<title>Create Event</title>
+<link href="css/jquery-ui.css" rel="stylesheet">
+<script src="js/jquery-1.11.2.js"></script>
+<script src="js/jquery-ui.js"></script>
 </head>
 <body>
 <nav>
@@ -24,17 +29,43 @@ Game Name:<br>
 Place game will be:<br>
 <input type="text" name="place"><br>
 
-  Birthday (date and time):<br>
+  Game (date and time):<br>
    <input type="datetime-local" name="bdaytime"><br>
 
-description:<br>
-<textArea name="description">
-</textArea><br>
-<input type="submit" name="submit">
-</form>
+<div class="ui-widget">
+	<label for="tags"> Games3:<br>
+	 </label> <input id="tags">
+</div>
+<p>Address:<br>
+<input type="text" size="60" name="address" placeholder="101 W. Game Knight Rd. Detroit, MI">
+</p>
+Description:<br>
+<TEXTAREA Name="content" ROWS=15 COLS=40></TEXTAREA>
+<br>
+<input type="submit"></form>
 
 </div>
 
+<script>
 
+$(function() {
+	$('#tags').keypress(function() {
+		$.ajax({
+			url : "TestServ",
+			type : "post",
+			data : '',
+			success : function(data) {
+				$("#tags").autocomplete({
+					source : data
+				});
+			},
+			error : function(data, status, er) {
+				console.log(data + "_" + status + "_" + er);
+			},
+		});
+	});
+});
+
+</script>
 </body>
 </html>
